# NewsCrawler

./: .gitignore  README.md  argon_log.py  config.yaml  items.py  main.py  pyproject.toml  requirements.txt
base/: base_request.py  base_spider.py
config/: base_config.py
db/: init_db.py  session.py
libs/: toutiao_signature.js
model/: news.py
news/: sina_crawl.py
news/baidu/: baidu_crawl.py  data_parser.py
news/cctv/: cctv_crawl.py  data_parser.py  request_handler.py
news/netease/: netease_crawl.py  request_handler.py
news/sina/: data_parser.py  request_handler.py  sina_crawl.py
news/tencent/: data_parser.py  request_handler.py  tencent_crawl.py
news/thepaper/: thepaper_crawl.py
news/toutiao/: data_parser.py  toutiao_crawl.py
news/weibo/: data_parser.py  weibo_crawl.py
news/zhihu/: data_parser.py  zhihu_crawl.py
parse/: news_parse.py
save/: database_handler.py  storage.py
service/: dingding.py
utils/: spider_tools.py
